[project]
name = "sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-mistralai>=1.1.4",
    "pymysql>=1.1.1",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.40",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
    "pymongo>=4.17.0",
    "plotly>=6.8.0",
    "pandas>=3.0.2",
    "matplotlib>=3.11.0",
    "seaborn>=0.13.2",
    "psycopg2-binary>=2.9.12",
]
